Cambio al título

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mary Garcia CV</title>
 </head>
 <body>
     <img src="assets\imgs\foto.jpeg" alt="foto" width="10%" height="10%">
