--- a/index.html
+++ b/index.html
@@ -4,20 +4,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Link de boostrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
+    <!-- LINK FONTAWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <title>Mary Garcia CV</title>
 </head>
 <body>
-    <img src="assets\imgs\foto.jpeg" alt="foto" width="10%" height="10%">
-    <img src="" alt="">
-    <h1>¡Hola!  Soy María Elena</h1>
-    <h2>Estoy escribiendo mi primer CV</h2>
-    <h3>Resumen</h3>
+    <!-- NAV BAR -->
+<nav class="navbar navbar-expand-lg bg-success navbar-dark text-white">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/imgs/logo.png" alt="logo" width="30%">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
+        <div class="navbar-nav boder">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link" href="#">Portafolio</a>
+          <a class="nav-link" href="#">Contáctanos</a>
+        </div>
+      </div>
+    </div>
+  </nav>  
+<section class="border border-danger">
+    <div class="row justify-content-center" >
+        <div class="col-md-6 border border-primary">
+    <img src="assets\imgs\foto.jpeg"  alt="mifoto" height="300px">
+    <h1>MARÍA ELENA GARCIA VALENCIA</h1>
+    </div>
+    <div class="col-md-6 border border-primary my-5">
+    <h2>Sobre mí</h2>
     <p>Nací en la ciudad capital de Guatemala.  Guatemala es también conocido como "El país de la eterna primavera"<div class="br">
         Desde pequeña me ha apasionado la informática y el mundo tecnológico. Aunque me gradué como Perito Contador <br>
         me inicié en el mundo laboral dando clases de Computación.  Esto me llevó a estudiar un Profesoradon en Informática.
           <br>Ahora me encuentro estudiando Ingeniería en Sistemas y me uní a este BootCamp con el objetivo de profundizar en 
           mis conocimientos sobre Desarrollo de Software.
-        </div></p>
+       </p>
+        </div>
+    </div>
+    </section>
+   
         <h3>DATOS PERSONALES</h3>
         <ol>
             <li>Nombre: María Elena García</li>
