--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- NAV BAR -->
-<nav class="navbar navbar-expand-lg bg-success navbar-dark text-white">
+<nav class="navbar navbar-expand-lg bg-success navbar-dark text-white sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
         <img src="./assets/imgs/logo.png" alt="logo" width="30%">
@@ -25,7 +25,7 @@
         <div class="navbar-nav boder">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
           <a class="nav-link" href="#">Portafolio</a>
-          <a class="nav-link" href="#">Contáctanos</a>
+          <a class="nav-link" href="#">Contáctame</a>
         </div>
       </div>
     </div>
@@ -79,6 +79,8 @@
         <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank"><br>Linkedin<br></a>
     
         <p>-------------------------------</p>
-    
+    <footer>
+      <p class="text-center">By @marygarcia</p>
+    </footer>
 </body>
 </html>        
