--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
       <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
         <div class="navbar-nav boder">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#">Portafolio</a>
-          <a class="nav-link" href="#">Contáctame</a>
+          <a class="nav-link" href="#Portafolio">Portafolio</a>
+          <a class="nav-link" href="#Educación">Educación</a>
+          <a class="nav-link" href="#Contáctame">Contáctame</a>
         </div>
       </div>
     </div>
@@ -54,7 +55,7 @@
             <li>Lugar de nacimiento: Guatemala</li>
             <li>Fecha de Nacimiento:  13 de octubre</li>
         </ol>
-        <h3>Formación</h3>
+        <h3 id="#Educación">Formación</h3>
         <p>Estudié el Profesorado en Informática en la Universidad de San Carlos de Guatemala.
             Cursé los primeros semestre de Ingeniería en Sistemas en la misma universidad.
             <br>Actualmente me encuentro haciendo mis validaciones de cursos en una Universidad Privada
@@ -72,11 +73,9 @@
         <li>BOOTCAMP FULLSTACK</li>
     </ul>
     <p><!--Este es un comentario no se mostrará en la página--></p>
-    <a href="portafolio.html"> Ir a Portafolio</a>
-    <a href="https://www.google.com" target="_blank"><br><img 
-        src="https://i.blogs.es/6f44dd/google-2015-1/450_1000.jpg" 
-        alt="Google doodle" width="15%" height="15%" ><br></a>
-        <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank"><br>Linkedin<br></a>
+    <h2 id="#Portafolio">PORTAFOLIO</h2>
+
+    <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank"><br>Linkedin<br></a>
     
         <p>-------------------------------</p>
     <footer>
