--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <!-- Link css -->
+     <link rel="stylesheet" href="./assets/style.css">
     <!-- Link de boostrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css">
     <!-- LINK FONTAWESOME -->
@@ -24,9 +25,9 @@
       <div class="collapse navbar-collapse " id="navbarNavAltMarkup">
         <div class="navbar-nav boder">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
-          <a class="nav-link" href="#Portafolio">Portafolio</a>
-          <a class="nav-link" href="#Educación">Educación</a>
-          <a class="nav-link" href="#Contáctame">Contáctame</a>
+          <a class="nav-link" href="#portafolio">Portafolio</a>
+          <a class="nav-link" href="#educacion">Educación</a>
+          <a class="nav-link" href="#contactame">Contáctame</a>
         </div>
       </div>
     </div>
@@ -55,7 +56,7 @@
             <li>Lugar de nacimiento: Guatemala</li>
             <li>Fecha de Nacimiento:  13 de octubre</li>
         </ol>
-        <h3 id="#Educación">Formación</h3>
+        <h3 id="educacion">Formación</h3>
         <p>Estudié el Profesorado en Informática en la Universidad de San Carlos de Guatemala.
             Cursé los primeros semestre de Ingeniería en Sistemas en la misma universidad.
             <br>Actualmente me encuentro haciendo mis validaciones de cursos en una Universidad Privada
@@ -70,12 +71,11 @@
     </ul>
     <h3>EDUCACIÓN</h3>
     <ul>
-        <li>BOOTCAMP FULLSTACK</li>
+        <li>BOOTCAMP FULLSTACK-DESAFÍO LATAM</li>
     </ul>
-    <p><!--Este es un comentario no se mostrará en la página--></p>
-    <h2 id="#Portafolio">PORTAFOLIO</h2>
+    <h2 id="portafolio">PORTAFOLIO</h2>
 
-    <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank"><br>Linkedin<br></a>
+    <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">Linkedin</a>
     
         <p>-------------------------------</p>
     <footer>
