--- a/index.html
+++ b/index.html
@@ -75,9 +75,10 @@
     </ul>
     <h2 id="portafolio">PORTAFOLIO</h2>
 
-    <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">Linkedin</a>
-    
-        <p>-------------------------------</p>
+    <!-- <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">Linkedin</a> -->
+    <i class="fa-brands fa-linkedin"></i>
+    <p>Lindekin</p>
+        <p>www.linkedin.com/in/maría-elena-garcía-7a26ba278</p>
     <footer>
       <p class="text-center">By @marygarcia</p>
     </footer>
