--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     <h2 id="portafolio">PORTAFOLIO</h2>
 
     <!-- <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">Linkedin</a> -->
-    <i class="fa-brands fa-linkedin"></i>
-    <p>Lindekin</p>
-        <p>www.linkedin.com/in/maría-elena-garcía-7a26ba278</p>
+    <i class="fa-brands fa-linkedin fa-3x"></i>
+    <!-- <p>Lindekin</p> -->
+    <p><a href="https://www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">www.linkedin.com/in/maría-elena-garcía-7a26ba278</a></p>
     <footer>
       <p class="text-center">By @marygarcia</p>
     </footer>
