Agregué enlaces a proyectos

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
       </div>
     </div>
   </nav>  
-<section class="border border-danger">
+<section class="bg-secondary">
     <div class="row justify-content-center" >
-        <div class="col-md-6 border border-primary">
+        <div class="col-md-6 text-center">
     <img src="assets\imgs\foto.jpeg"  alt="mifoto" height="300px">
     <h1>MARÍA ELENA GARCIA VALENCIA</h1>
     </div>
-    <div class="col-md-6 border border-primary my-5">
+    <div class="col-md-6 my-5 text-white">
     <h2>Sobre mí</h2>
     <p>Nací en la ciudad capital de Guatemala.  Guatemala es también conocido como "El país de la eterna primavera"<div class="br">
         Desde pequeña me ha apasionado la informática y el mundo tecnológico. Aunque me gradué como Perito Contador <br>
@@ -49,33 +49,131 @@
         </div>
     </div>
     </section>
-   
-        <h3>DATOS PERSONALES</h3>
-        <ol>
+   <section class="bg-secondary">
+    <div class="row bg-success text-center">
+      <h2 class="card-title" id="portafolio">DATOS PERSONALES</h2>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="col align-self-center" >
+        <ol class="text-white text-center">
             <li>Nombre: María Elena García</li>
             <li>Lugar de nacimiento: Guatemala</li>
             <li>Fecha de Nacimiento:  13 de octubre</li>
         </ol>
-        <h3 id="educacion">Formación</h3>
-        <p>Estudié el Profesorado en Informática en la Universidad de San Carlos de Guatemala.
-            Cursé los primeros semestre de Ingeniería en Sistemas en la misma universidad.
-            <br>Actualmente me encuentro haciendo mis validaciones de cursos en una Universidad Privada
-            de mi país que se adecúa mejor a mi horario de trabajo. 
-              
-            </div></p>   
-    <h3>Premios y Reconocimientos</h3>
-    <ul>
+      </div>
+    </div>
+          </section>
+        </div>
+        </div>
+          <section  classs="bg-secondary"> 
+            <div class="row justify-content-center bg-success text-center">
+              <h2 class="card-title" id="portafolio">CERTIFICACIONES</h2>
+            </div>
+              <div class="row align-self-center bg-secondary">
+                <div class="col align-self-center" >
+    <ul class="text-white text-center">
         <li>IC3 Digital Literacy Certification (2019)</li>
         <li>77-727: MOS: Microsoft Office Excel 2016 (2019)</li>
         <li>Microsoft Certified Educator (2018)</li>
     </ul>
-    <h3>EDUCACIÓN</h3>
+          </div>
+            </div>
+    <div class="row bg-success text-center">
+      <h2 class="card-title" id="portafolio">EDUCACIÓN</h2>
+    </div>
+    <div class="container-fluid bg-secondary">
+      <div class="row bg-secondary text-white">
+        <div class="col text-center border border">
     <ul>
         <li>BOOTCAMP FULLSTACK-DESAFÍO LATAM</li>
     </ul>
-    <h2 id="portafolio">PORTAFOLIO</h2>
+  </div>
+  </div>
+  </section> 
+    <section>
+      <div class="row justify-content-center bg-success text-center">
+        <h2 class="card-title" id="portafolio">PORTAFOLIO</h2>
+      </div>
+    </div>
+        <div class="row justify-content-center bg-secondary">
+          <!-- Card -->
+          <div class="col-md-3 mt-5">
+            <div class="card">
+            <img src="./assets/imgs/Proyecto 1.png" class="card-img-bottom" alt="corazon" style="width: 16rem;">
+            <div class="card-body">
+            <h5 class="card-title mb-3 bg-success">Proyecto 1</h5>
+            <p class="card-text m-0 mb-2">
+              Modelo de Curriculum Vitae</p>
+             <p class="card-text text-center">
+              <a href="./proyecto_1.html" class="card-link">Ir a proyecto 1</a>
+             </p>
+             <hr>
+             <div class="d-flex justify-content-center align-items-baseline">
+              <span class="text-success fs-4">$29,000</span>
+             </div>
+          </div>
+        </div>
+        </div>
+        <!--Hasta aquí llega el responsive  -->
+        <div class="col-md-4 mt-5">
+          <div class="card text-center">
+          <img src="./assets/imgs/Proyecto_2.png" class="card-img-top" alt="cama" style="width: 31rem;">
+          <div class="card-body">
+          <h5 class="card-title mb-3 bg-success">Proyecto 2</h5>
+          <p class="card-text m-0 mb-2">
+            Modelo de e-Market con CSS.</p>
+           <p class="car-text">
+            <a href="./proyecto_2.html" class="card-link">Ir a proyecto 2</a>
+           </p>
+           <hr>
+           <div class="d-flex justify-content-center align-items-baseline">
+            <span class="text-success fs-4">$29,000</span>
+           </div>
+        </div>
+      </div>
+      </div>
+      <!-- TErcer card -->
+      <div class="col-md-4 mt-5">
+        <div class="card">
+        <img src="./assets/imgs/Proyecto_3.png" class="card-img-top" alt="corazon" style="width: 34rem;">
+        <div class="card-body">
+        <h5 class="card-title mb-3 ">Proyecto 3</h5>
+        <p class="card-text m-0 mb-2">
+          Usando Flex box
+        </p>
+        <a href="./proyecto_3.html" class="card-link">Ir a proyecto 3</a>
+         <hr>
+         <div class="d-flex justify-content-center align-items-baseline">
+          <span class="text-success fs-4">$29,000</span>
+         </div>
+      </div>
+    </div>
+    </div>
+    <!-- Cuarto card -->
+    <div class="col-md-4 mt-5">
+      <div class="card">
+      <img src="./assets/imgs/Proyecto_4.png" class="card-img-top" alt="corazon">
+      <div class="card-body">
+      <h5 class="card-title mb-3 ">Proyecto 4</h5>
+      <p class="card-text m-0 mb-2">
+        Encuentra opciones de descuentos en comedores, closets, línea blanca, etc.</p>
+       <p class="car-text">
+        <i class="fa-solid fa-location-dot"> Ciudad de Guatemala, Guatemala</i>
+       </p>
+       <hr>
+       <div class="d-flex justify-content-center align-items-baseline">
+        <span class="text-success fs-4">$29,000</span>
+       </div>
+    </div>
+  </div>
+  </div>
+  
+      </div>  
+      
+  </section>
 
-    <!-- <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank">Linkedin</a> -->
     <i class="fa-brands fa-linkedin"></i>
     <p>Lindekin</p>
         <p>www.linkedin.com/in/maría-elena-garcía-7a26ba278</p>
