--- a/index.html
+++ b/index.html
@@ -158,9 +158,10 @@
       <div class="card-body">
       <h5 class="card-title mb-3 ">Proyecto 4</h5>
       <p class="card-text m-0 mb-2">
-        Encuentra opciones de descuentos en comedores, closets, línea blanca, etc.</p>
+        Punto de venta usando Boostrap</p>
        <p class="car-text">
-        <i class="fa-solid fa-location-dot"> Ciudad de Guatemala, Guatemala</i>
+        <a href="./proyecto_4.html" class="card-link">Ir a proyecto 4</a>
+         <hr>
        </p>
        <hr>
        <div class="d-flex justify-content-center align-items-baseline">
@@ -173,12 +174,15 @@
       </div>  
       
   </section>
-
-    <i class="fa-brands fa-linkedin"></i>
-    <p>Lindekin</p>
+<div class="row bg-secondary">
+    <i class="fa-brands fa-linkedin"> Lindekin</i>
         <p>www.linkedin.com/in/maría-elena-garcía-7a26ba278</p>
-    <footer>
-      <p class="text-center">By @marygarcia</p>
-    </footer>
+      </div>
 </body>
+<footer>
+  <strong>
+    <div class="row bg-success">
+  <p class="text-center mt-3 ">By @marygarcia. Todos los derechos reservados</p></strong>
+</div>
+</footer>
 </html>        
