Modificación de head(agregando ícono), cards y footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/000/338/240/original/vector-cv-icon.jpg">
     <!-- Link css -->
      <link rel="stylesheet" href="./assets/style.css">
     <!-- Link de boostrap -->
@@ -100,89 +101,82 @@
         <div class="row justify-content-center bg-secondary">
           <!-- Card -->
           <div class="col-md-3 mt-5">
-            <div class="card">
-            <img src="./assets/imgs/Proyecto 1.png" class="card-img-bottom" alt="corazon" style="width: 16rem;">
+            <div class="card h-80">
+            <img src="./assets/imgs/Proyecto 1.png" class="card-img-bottom" alt="corazon" style="height: 500px; object-fit: cover;">
             <div class="card-body">
-            <h5 class="card-title mb-3 bg-success">Proyecto 1</h5>
-            <p class="card-text m-0 mb-2">
+            <h5 class="card-title mb-3 bg-success text-center">Proyecto 1</h5>
+            <p class="card-text mb-2">
               Modelo de Curriculum Vitae</p>
              <p class="card-text text-center">
-              <a href="./proyecto_1.html" class="card-link">Ir a proyecto 1</a>
              </p>
              <hr>
-             <div class="d-flex justify-content-center align-items-baseline">
-              <span class="text-success fs-4">$29,000</span>
+             <div class="d-flex justify-content-center">
+              <a href="./proyecto_1.html" class="card-link">Ir a proyecto 1</a>
              </div>
           </div>
         </div>
         </div>
         <!--Hasta aquí llega el responsive  -->
-        <div class="col-md-4 mt-5">
-          <div class="card text-center">
-          <img src="./assets/imgs/Proyecto_2.png" class="card-img-top" alt="cama" style="width: 31rem;">
+        <div class="col-md-3 mt-5">
+          <div class="card h-80">
+          <img src="./assets/imgs/Proyecto_2.png" class="card-img-top" alt="cama" style="height: 500px; object-fit: cover;">
           <div class="card-body">
-          <h5 class="card-title mb-3 bg-success">Proyecto 2</h5>
-          <p class="card-text m-0 mb-2">
+          <h5 class="card-title mb-3 bg-success text-center">Proyecto 2</h5>
+          <p class="card-text mb-2">
             Modelo de e-Market con CSS.</p>
            <p class="car-text">
-            <a href="./proyecto_2.html" class="card-link">Ir a proyecto 2</a>
            </p>
            <hr>
-           <div class="d-flex justify-content-center align-items-baseline">
-            <span class="text-success fs-4">$29,000</span>
+           <div class="d-flex justify-content-center">
+            <a href="./proyecto_2.html" class="card-link">Ir a proyecto 2</a>
            </div>
         </div>
       </div>
       </div>
       <!-- TErcer card -->
-      <div class="col-md-4 mt-5">
-        <div class="card">
-        <img src="./assets/imgs/Proyecto_3.png" class="card-img-top" alt="corazon" style="width: 34rem;">
+      <div class="col-md-3 mt-5">
+        <div class="card h-80">
+        <img src="./assets/imgs/Proyecto_3.png" class="card-img-top" alt="corazon" style="height: 500px; object-fit: cover;">
         <div class="card-body">
-        <h5 class="card-title mb-3 ">Proyecto 3</h5>
-        <p class="card-text m-0 mb-2">
+        <h5 class="card-title mb-3 bg-success text-center">Proyecto 3</h5>
+        <p class="card-text mb-2">
           Usando Flex box
         </p>
-        <a href="./proyecto_3.html" class="card-link">Ir a proyecto 3</a>
          <hr>
-         <div class="d-flex justify-content-center align-items-baseline">
-          <span class="text-success fs-4">$29,000</span>
+         <div class="d-flex justify-content-center">
+          <a href="./proyecto_3.html" class="card-link">Ir a proyecto 3</a>
          </div>
       </div>
     </div>
     </div>
     <!-- Cuarto card -->
-    <div class="col-md-4 mt-5">
-      <div class="card">
-      <img src="./assets/imgs/Proyecto_4.png" class="card-img-top" alt="corazon">
+    <div class="col-md-3 mt-5">
+      <div class="card h-80">
+      <img src="./assets/imgs/Proyecto_4.png" class="card-img-top" alt="corazon" style="height: 500px; object-fit: cover;">
       <div class="card-body">
-      <h5 class="card-title mb-3 ">Proyecto 4</h5>
-      <p class="card-text m-0 mb-2">
+      <h5 class="card-title mb-3 text-center bg-success">Proyecto 4</h5>
+      <p class="card-text mb-2">
         Punto de venta usando Boostrap</p>
        <p class="car-text">
-        <a href="./proyecto_4.html" class="card-link">Ir a proyecto 4</a>
-         <hr>
+        <hr>
        </p>
-       <hr>
-       <div class="d-flex justify-content-center align-items-baseline">
-        <span class="text-success fs-4">$29,000</span>
+       <div class="d-flex justify-content-center">
+        <a href="./proyecto_4.html" class="card-link">Ir a proyecto 4</a>
        </div>
     </div>
   </div>
   </div>
-  
       </div>  
       
-  </section>
-<div class="row bg-secondary">
-    <i class="fa-brands fa-linkedin"> Lindekin</i>
-        <p>www.linkedin.com/in/maría-elena-garcía-7a26ba278</p>
+  <footer class="bg-success">
+      <div class="container mt-5 mb-3">
+        <div class="row align-items-center">
+          <div class="col-md-12 bg-success text-center">
+            <i class="fa-brands fa-linkedin fa-2x mt-3"></i>
+            <a href="www.linkedin.com/in/maría-elena-garcía-7a26ba278" target="_blank" class="Linkedin">Mi Lindekin</a> 
+          <strong><p class="text-center mt-3 mb-3">By @marygarcia. Todos los derechos reservados</p></strong>
+          </div>
       </div>
+  </footer>
 </body>
-<footer>
-  <strong>
-    <div class="row bg-success">
-  <p class="text-center mt-3 ">By @marygarcia. Todos los derechos reservados</p></strong>
-</div>
-</footer>
 </html>        
